# glitch

./: .env  .gitignore  README.md  clear.sh  docker-compose.yaml  down.sh  old.env  sample.env  teamdata.txt  test.py  test.sh  test.yaml  test2.sh  up.sh
.docker/: entry.sh
services/conveyor/: README.md  docker-compose.yml  pyproject.toml
services/conveyor/conveyor/: __init__.py  config.py  data.py  model.py  remote.py  service.py  storage.py
services/conveyor/deploy/: Dockerfile  redis.conf
services/conveyor/scripts/: client.py  server.py
services/oilmarket/oilmarket/: Cargo.toml  Cranky.toml  Dockerfile  build.rs
services/oilmarket/oilmarket/.sqlx/: query-02c6ce08525b811e0ddae9fd77af2d21d1c733e18b213ed8e60fdf27a28242cf.json  query-0865e38359e0800779ba2b5f48b6e1f875ae652a0300c3382908d230babd88e2.json  query-27842df2f461aadcebdd608641a0c0bd3a9b5be8b37d650b75b09c0b205831bb.json  query-4bec093fd35154fadd5df13b9dd52e5aa407100aa37cda286aa6d8a9e01e1aca.json  query-6b971574316b3ea6fe8fc295a328788cb258f6f2761a67a8ff391ad085654d8c.json  query-7a163b832f406aa168f147ea3e9b3cc54d887f1506f706f71c923c594ae5c804.json  query-9d438933891a07b821827ddaff5bad897d55126d081b1d88d81ca333ed596080.json  query-ab52c0cdbc184d6844786c3ead58c73b2a5b69426f601e84d09bf4d5f2358f65.json  query-ba3fa959dec3c01f0cc0f43c7ca0510bd82c641e6cc43c798270992599464efe.json  query-caca79ce6e1d959445686f5667ee0c7f97d1f3e50060ea49bd7baa7cddcc13d7.json  query-d3b42014ffd04ab1e12b9aa2efe9ab554f0549c01e26ab4dcd8b6e558d53cd16.json  query-de7b623d2fce884a69512f13f73f6e84f9bacd86b8e7e52158717cd2d2ffac68.json  (+3 more)
(+620 files in other folders)
