[package]
name = "oilmarket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
num = { version = "0.4.0", features = ["serde"] }
num-primes = "0.3.0"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.10"
prost = "0.12"
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio", "uuid"] }
sqlx-postgres = { version = "0.7.2", features = ["uuid"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.5.0", features = ["serde", "v4"] }

[build-dependencies]
tonic-build = "0.10"
